# dsnote

./: .gitignore  README.md  conv-note.sh  donshell.ps1  donshell.sh  myconfig  notes.sh  pub-to-gitbook.sh  pub-to-github.sh
incubator/: README.md
incubator/dov/: .gitignore  README.md  dov.v  v.mod
incubator/fsharp/: Notes.fs  Program.fs  Program.fsx  README.md  donno.fsproj
incubator/gawk/: ds.awk  dsnote.awk
incubator/haskell/honno/: README.md  honno.cabal  package.yaml
incubator/haskell/honno/app/: Main.hs
incubator/haskell/honno/src/: Lib.hs
incubator/nim/: dsnote.nim
incubator/ocaml/: dsnote.ml
incubator/python/: dsnote.py
incubator/ron/: Cargo.toml  README.md
incubator/ron/src/: lib.rs  main.rs  notes.rs
